ncc/testsuite/negative/external-extensions.n
// REFERENCE: external-extensions-lib1.dll
// REFERENCE: external-extensions-lib2.dll

[Test.Test] // W: warning: using type.* that was defined in more than one assembly.*
public class A
{
}

System.Console.WriteLine(1)

/*
BEGIN-OUTPUT
1
END-OUTPUT
*/
